--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -33,5 +33,11 @@
   "scripts": {
     "build": "rimraf ./dist && tsc && vite build",
     "release": "release-it"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   }
 }
