--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   ],
   "main": "index.ts",
   "scripts": {
+    "build": "npm run build --workspaces",
     "type-check": "tsc --noEmit",
     "test": "echo \"Running tests...\" && exit 0",
-    "lint": "eslint . --ext .ts,.tsx",
-    "prepare": "husky"
+    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore",
+    "prepare": "husky",
+    "release": "release-it"
   },
   "author": "Sivakarthikeyan",
   "license": "MIT",
@@ -51,5 +53,43 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "release-it": {
+    "git": {
+      "requireCleanWorkingDir": true,
+      "requireUpstream": true,
+      "requireBranch": "main",
+      "commit": true,
+      "commitMessage": "chore(release): v${version}",
+      "commitArgs": "--no-verify",
+      "tag": true,
+      "tagName": "v${version}",
+      "tagAnnotation": "Release v${version}",
+      "push": true
+    },
+    "github": {
+      "release": true
+    },
+    "npm": {
+      "publish": false
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": {
+          "name": "angular"
+        },
+        "infile": "CHANGELOG.md",
+        "header": "# Changelog"
+      },
+      "@release-it/bumper": {
+        "out": "packages/**/package.json"
+      }
+    },
+    "hooks": {
+      "after:@release-it/conventional-changelog:bump": "git add CHANGELOG.md",
+      "before:npm:release": "npm run build",
+      "tagName": "v${version}",
+      "after:release": "echo 🎉 Successfully released ${name} v${version}"
+    }
   }
 }
