--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -39,5 +39,15 @@
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
+  },
+  "release-it": {
+    "git": false,
+    "npm": {
+      "publish": true,
+      "skipChecks": true
+    },
+    "hooks": {
+      "after:release": "echo echo 🎉 Successfully published ${name} v${version}"
+    }
   }
 }
