--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -40,9 +40,14 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "release-it": {
     "git": false,
-    "npm": false,
+    "npm": {
+      "publish": true
+    },
     "hooks": {
       "after:release": "echo echo 🎉 Successfully published ${name} v${version}"
     }
