--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rone/hooks",
+  "name": "@ronekit/hooks",
   "version": "0.1.0-alpha.6",
   "description": "Collection of usefull React hooks",
   "lisense": "MIT",
